# Purse-ETL

./: .gitignore  README.md  config.yaml  dag.py  dag.sh  pyproject.toml  quick_start.ipynb
.github/ISSUE_TEMPLATE/: refactor.md  release.md
app/: main.py  main.sh
app/api/v1/: endpoints.py  types.py
etl/: utils.py
etl/extractor/: __init__.py  abstract.py
etl/extractor/binance_collector/: __init__.py  agg_trades.py  base.py  book_depth.py  book_ticker.py  klines.py  premium_index.py  trades.py  types.py
etl/loader/: __init__.py  abstract.py  query.py  redis_loader.py  sql_loader.py  table.py
etl/logger/: __init__.py  setup_logger.py
etl/transformer/binance_collector/: __init__.py  agg_trades_transformer.py  book_depth_transformer.py  book_ticker_transformer.py  klines_transformer.py  premium_index_klines_transformer.py  trades_transformer.py
logs/: airflow_scheduler.out  airflow_webserver.out
