[tool.poetry]
name = "etl"
version = "1.1.0"
description = "Purse ETL Packege"
authors = ["Jason <eppioes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
pandas = "2.2.2"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pyarrow = "^17.0.0"
ipykernel = "^6.29.5"
joblib = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
